@@ -28,6 +28,7 @@ $ -> Language fix or change
 
 16-Jun-2012 Jean-Marie Simonet
  $ Updating installation ini file pl-PL
+ ^ [#28644] Move JApplicationHelper::parseXMLInstallFile to JInstaller. Thanks Rouven.
 
 15-Jun-2012 Christophe Demko
  # [#28670] SQL error when installing trunk without sample data (Ofer Cohen)
